fix stretched img

--- a/css/default.css
+++ b/css/default.css
@@ -54,7 +54,6 @@ body {
   flex-shrink: 0;
   width: 100vw;
   min-width: 100%;
-  min-height: 100%;
 }
 
 .background-txt {
